Fix main menu on mobile size

--- a/css/init.css
+++ b/css/init.css
@@ -58,7 +58,7 @@ a {
   color: white;
   text-transform: uppercase;
   font-weight: lighter;
-  font-size: 0.9em;
+  font-size: 0.8em;
   padding: 0 10px!important;
 }
 
